tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_99.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((((200 + 200) - (y + 0)) + ((1 - 0) + (+ x))) > (((1223 + 0) DIV (- x)) * ((1223 MOD 2) * (200 + x))));
               q := ((((1223 MOD 1) DIV (+ y)) DIV ((200 DIV 200) + (1 + z))) > (((- 200) MOD (0 + y)) * ((- 2) DIV (x + 2))));
               p := (((+ (x DIV 0)) # ((- 200) DIV (+ 200))) & (((1 MOD 200) + (+ 200)) # ((z + 1223) - (2 DIV 1223))));
  (* error *)  p := ((((r MOD 1) DIV (y MOD 0)) * (- (0 DIV 1))) >= (((x + 1) - (200 + 0)) * ((1 + x) MOD (x * 0))));
               r := ((((1223 + z) DIV (0 - y)) # ((+ 1) DIV (- 1))) & ((- (x - 1)) >= (- (+ 200))));
               x := (((+ (- x)) MOD ((2 + 200) - (0 DIV 200))) - (((+ 200) - (2 MOD 1223)) + ((1 DIV z) * (+ 0))));
               r := ((((- 200) DIV (1 * 1223)) + ((y DIV y) * (+ 2))) # (((z DIV y) + (- z)) * ((0 - y) * (+ 1223))));
               z := ((((1 - 1223) - (z - x)) - (+ (+ 1223))) + (+ ((+ 200) * (1 MOD 200))));
               y := ((- (- (200 - 0))) MOD ((- (200 + 1)) MOD ((2 DIV 0) MOD (- 200))));
               p := ((((x DIV 1223) - (+ y)) DIV ((+ z) DIV (- 1223))) >= (((z * 1) + (+ z)) - ((y - x) MOD (1 DIV y))))
END Test14.